# quota-lens

./: .gitignore  README.md  README_CN.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/providers/: claude.rs  glm.rs  mod.rs  openai.rs  provider.rs
src/components/: Popup.tsx  ProgressBar.tsx  TokenStats.tsx  TokenUsageChart.tsx
src/components/Settings/: AboutPanel.tsx  NotificationConfig.tsx  ProviderConfig.tsx  SchedulerConfig.tsx  SettingsPage.tsx  ThemeConfig.tsx
src/hooks/: useConfig.ts  useI18n.tsx  useTheme.ts  useTheme.tsx
src/i18n/: en.ts  zh.ts
src/styles/: globals.css
